feat: Refactor OrderController and add ProductOrderService for enhanced order management and metrics